header section done

--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Sujon Rana</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
+      <section class="header-section">
+        <div class="half-width">
+          <div id="header-info">
+            <h1 id="greatings"> Hello I'm</h1>
+            <h1 id="name">Sujon Rana</h1>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
+              laboriosam, facilis reprehenderit ipsam sit harum rerum aliquid ut
+              ea in.
+            </p>
+            <a id="hire-me" target="_blank" href="https://www.linkedin.com/in/sujonrana/">Hire me</a>
+          </div>
+        </div>
 
+        <div class="half-width">
+          <img src="images/sujon.png" alt="" />
+        </div>
+      </section>
     </header>
 
-    <main>
+    <main></main>
 
-    </main>
-
-    <footer>
-        
-    </footer>
-    
-</body>
+    <footer></footer>
+  </body>
 </html>
