--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Sujon Rana</title>
   </head>
@@ -15,14 +18,19 @@
       <section class="header-section">
         <div class="half-width">
           <div id="header-info">
-            <h1 id="greatings"> Hello I'm</h1>
+            <h1 id="greatings">Hello I'm</h1>
             <h1 id="name">Sujon Rana</h1>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
               laboriosam, facilis reprehenderit ipsam sit harum rerum aliquid ut
               ea in.
             </p>
-            <a id="hire-me" target="_blank" href="https://www.linkedin.com/in/sujonrana/">Hire me</a>
+            <a
+              id="hire-me"
+              target="_blank"
+              href="https://www.linkedin.com/in/sujonrana/"
+              >Hire me</a
+            >
           </div>
         </div>
 
@@ -32,8 +40,76 @@
       </section>
     </header>
 
-    <main></main>
+    <main>
+      <section class="biography-section">
+        <div class="half-width">
+          <img id="header-image" src="images/sujon_dream.png" alt="" />
+        </div>
 
-    <footer></footer>
+        <div class="half-width">
+          <div class="bio-info">
+            <h2 id="bio-title">Biography</h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Blanditiis, mollitia. Ullam eveniet modi expedita quod
+              exercitationem atque neque, laudantium reprehenderit, aliquid
+              ipsam architecto vitae sed.
+            </p>
+            <a
+              id="download-cv-link"
+              href="https://www.linkedin.com/in/sujonrana/"
+              >Download CV</a
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="work-section">
+        <div class="work-details">
+          <h2 id="work-heading">My Latest Work</h2>
+          <div class="work-div">
+            <img src="images/latest-work/work-1.png" alt="" />
+          </div>
+
+          <div class="work-div">
+            <img src="images/latest-work/work-2.jpg" alt="" />
+          </div>
+          <div class="work-div">
+            <img src="images/latest-work/work-3.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <section class="footer-section">
+        <div>
+          <h2 id="footer-heading">What Client are say</h2>
+
+          <div>
+            <div class="client-info">
+              <p class="client-name">Pete Jackson</p>
+              <p class="client-title">Founder & CEO Samsam Tech.</p>
+            </div>
+            <div class="client-review">
+              <div class="client-review-box">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Pariatur quo cupiditate, et maiores minus voluptatum?
+                  </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="contact">
+            <p>Leave me a message in the</p>
+            <p id="contact-email">example@gmail.com</p>
+          </div>
+        </div>
+      </section>
+      <div>
+        <p>&copy; Sujon Rana, All right reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
